feat: adds json array docs

--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -10,5 +10,6 @@ body.fixed-top-padding
             include partials/results-section.pug
             include partials/testimonial-trial-row.pug
             include partials/all-features.pug
+            include partials/tweets.pug
             include partials/public-stats-section.pug
     include partials/footer.pug
