feat: new tweet

--- a/src/layouts/partials/tweets.pug
+++ b/src/layouts/partials/tweets.pug
@@ -4,7 +4,7 @@ section.tweets
       .col-sm-12.text-center
         h3.section-header What the  people say
     .row
-      .col-sm-4
+      .col-sm-3
         blockquote.twitter-tweet(data-lang='en')
           p(lang='en', dir='ltr')
             | Just made some simple tests w/
@@ -12,7 +12,15 @@ section.tweets
             | . Great features, awesome UI and I 😍 the way to add browser tests. Happy to see such tools coming from the (realworld) neighbourhood.
           | — Stephan Georg (@StephanGeorg)
           a(href='https://twitter.com/StephanGeorg/status/961704989591777286?ref_src=twsrc%5Etfw') February 8, 2018
-      .col-sm-4
+      .col-sm-3
+        blockquote.twitter-tweet(data-lang='en')
+          p(lang='en', dir='ltr')
+            | Testing your code before pushing it live won't always give you piece of mind. Gladly there are services like
+            a(href='https://twitter.com/checklyHQ?ref_src=twsrc%5Etfw') @checklyHQ
+            |  that continuously test your endpoints and help you have a good night of sleep. Rock on!
+          | — Daniel Andrade (@dspillere)
+          a(href='https://twitter.com/dspillere/status/1051019490044071936?ref_src=twsrc%5Etfw') October 13, 2018
+      .col-sm-3
         blockquote.twitter-tweet(data-lang='en')
           p(lang='en', dir='ltr')
             | I just found
@@ -20,7 +28,7 @@ section.tweets
             | . Awesome monitoring site powered by Puppeteer.
           | — Dario Kondratiuk (@hardkoded)
           a(href='https://twitter.com/hardkoded/status/1017378473277521921?ref_src=twsrc%5Etfw') July 12, 2018
-      .col-sm-4
+      .col-sm-3
         blockquote.twitter-tweet(data-lang='en')
           p(lang='en', dir='ltr')
             | Looking forward to giving
