fix: fixes wrong links

--- a/src/layouts/blog/single.pug
+++ b/src/layouts/blog/single.pug
@@ -9,7 +9,7 @@ body
       ul
         | !{'{{ range .}}'}
         li
-          a(href="{'{{ .Permalink }}'}") #{'{{ .Title }}'}
+          a(href="{{ .Permalink }}") #{'{{ .Title }}'}
         | !{'{{ end }}'}
       | !{'{{ end }}'}
     .container
