--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -27,7 +27,7 @@ footer.footer
                     h6 Company
                     ul
                         li
-                            a(href='/whats-new') News
+                            a(href='https://headwayapp.co/checkly-updates', target='_blank') News
                         li
                             a(href='/blog') Blog
                         li
