--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -2,10 +2,11 @@ section.hero-section
   .container
     .row
       .col-sm-12.col-md-10.offset-md-1.text-center
-        h1.hero-text A better way to monitor your API's and site click flows
+        h1.hero-text A better way to monitor your APIs and site click flows
       .col-sm-12.col-md-8.offset-md-2.text-center
         h2.hero-sub.mb-3
-          | Seamlessly monitor the performance and correctness of your API endpoints and vital site transactions from a single dashboard.
+          | Monitor the performance and correctness of your API endpoints & vital site transactions from a single,
+          | simple dashboard.
         .mb-4
           a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
     .row
