--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -19,6 +19,8 @@ html(lang='en')
         meta(property='twitter:description' content='{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}')
         meta(property='twitter:image' content='{{ if .IsPage }}{{ with .Params.featured_image }}{{ . }}{{end}}{{ else}}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}')
 
+        link(href='https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700' rel='stylesheet')
+
         link(rel='icon' type='image/png' href='/images/racoon_favicon.png')
         link(rel='alternate' href='{{ .Permalink }}' hreflang='en-us')
         link(rel='canonical' href='{{ .Permalink }}')
@@ -85,18 +87,4 @@ html(lang='en')
             | if (location.host === 'checklyhq.com') {
             |   window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
             |   heap.load("3553865455");
-            | }
-        // Hotjar
-        script
-            | if (location.host === 'checklyhq.com') {
-            |   (function(h,o,t,j,a,r){
-            |   h.hj=h.hj || function () {
-            |     (h.hj.q = h.hj.q || []).push(arguments)
-            |   };
-            |   h._hjSettings={hjid: 717179, hjsv: 6};
-            |   a=o.getElementsByTagName('head')[0];
-            |   r=o.createElement('script');r.async=1;
-            |   r.src=t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-            |   a.appendChild(r);
-            |   })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
             | }
