--- a/site/layouts/docs/list.html
+++ b/site/layouts/docs/list.html
@@ -9,30 +9,32 @@
 }</style><!-- Global site tag (gtag.js) - Google Analytics--><script async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1"></script><script>  window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'UA-110523681-1');</script><!-- Drift code--><script>if (location.host === 'checklyhq.com') {
-!(function () {
-  var t = window.driftt = window.drift = window.driftt || []
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error('Drift snippet included twice.'))
-    t.invoked = !0, t.methods = [ 'identify', 'config', 'track', 'reset', 'debug', 'show', 'ping', 'page', 'hide', 'off', 'on' ],
-    t.factory = function (e) {
-      return function () {
-        var n = Array.prototype.slice.call(arguments)
-        return n.unshift(e), t.push(n), t
+  gtag('config', 'UA-110523681-1');</script><!-- Drift code--><script>{{ if ne .Section "blog" }} 
+ if (location.host === 'checklyhq.com') {
+  !(function () {
+    var t = window.driftt = window.drift = window.driftt || []
+    if (!t.init) {
+      if (t.invoked) return void (window.console && console.error && console.error('Drift snippet included twice.'))
+      t.invoked = !0, t.methods = [ 'identify', 'config', 'track', 'reset', 'debug', 'show', 'ping', 'page', 'hide', 'off', 'on' ],
+      t.factory = function (e) {
+        return function () {
+          var n = Array.prototype.slice.call(arguments)
+          return n.unshift(e), t.push(n), t
+        }
+      }, t.methods.forEach(function (e) {
+        t[e] = t.factory(e)
+      }), t.load = function (t) {
+        var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement('script')
+        o.type = 'text/javascript', o.async = !0, o.crossorigin = 'anonymous', o.src = 'https://js.driftt.com/include/' + n + '/' + t + '.js'
+        var i = document.getElementsByTagName('script')[0]
+        i.parentNode.insertBefore(o, i)
       }
-    }, t.methods.forEach(function (e) {
-      t[e] = t.factory(e)
-    }), t.load = function (t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement('script')
-      o.type = 'text/javascript', o.async = !0, o.crossorigin = 'anonymous', o.src = 'https://js.driftt.com/include/' + n + '/' + t + '.js'
-      var i = document.getElementsByTagName('script')[0]
-      i.parentNode.insertBefore(o, i)
     }
-  }
-}())
-drift.SNIPPET_VERSION = '0.3.1'
-drift.load('7bxit3egu3zv')
-}</script><!-- Heap tracking code--><script>if (location.host === 'checklyhq.com') {
+  }())
+  drift.SNIPPET_VERSION = '0.3.1'
+  drift.load('7bxit3egu3zv')
+ }
+{{ end }}</script><!-- Heap tracking code--><script>if (location.host === 'checklyhq.com') {
   window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
   heap.load("3553865455");
 }</script></head></html><body><nav class="navbar navbar-toggleable-md fixed-top"><div class="container"><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"><span></span><span></span><span></span></button><a class="navbar-brand" href="/"><img src="/images/text_racoon_logo.svg" width="120"></a><div class="collapse navbar-collapse" id="navbarSupportedContent"><ul class="navbar-nav ml-auto"><li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" href="#">Product</a><div class="dropdown-menu big-drop-shadow"><a class="dropdown-item" href="/product/api-monitoring/">API Monitoring</a><a class="dropdown-item" href="/product/transaction-monitoring/">Transaction Monitoring</a></div></li><li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li><li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li><li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li></ul><form class="form-inline my-2 my-lg-0 ml-md-3"><a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" href="https://app.checklyhq.com/">Log in</a><a class="btn btn-success my-2 my-sm-0" href="https://app.checklyhq.com/signup">Start your free trial</a></form></div></div></nav><div class="main"><div class="container"><div class="row"><div class="col-sm-3 p"><ul class="sidebar-menu">{{ $currentPage := . }}
