style: move site transaction to left

--- a/src/layouts/partials/site-monitoring-section.pug
+++ b/src/layouts/partials/site-monitoring-section.pug
@@ -1,11 +1,7 @@
 section.site-monitoring-section
   .container
     .row
-      .col-lg-6.col-sm-0
-        .image-side.left
-          img.screen-image.big-landing-image.code.fade-in.lazy.hidden-md-down(src='/landing/browser-code@2x.png')
-          img.screen-image.big-landing-image.screenshots.fade-in.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png')
-      .col-lg-5.offset-lg-1.col-sm-12
+      .col-sm-5
         .text-side.text-left
           h5.section-super-header transaction monitoring
           h2.section-header No more broken shopping carts
@@ -14,5 +10,9 @@ section.site-monitoring-section
             | flows. Take screenshots to get instant insights into what's working and what's not.
             | <br><br>
             | Scripting browser click flows used to suck. Not anymore. Checkly uses a Google's Puppeteer framework to run your
-            | flows in a Chrome browser. Tweak your script from your local machine or start with one of our examples.
+            | flows in a Chrome browser.
           a.cta-link(href='/product/transaction-monitoring/') Learn more
+      .col-sm-6.offset-sm-1
+        .image-side.right
+          img.screen-image.big-landing-image.code.fade-in.ml-md-5.lazy(src='/landing/browser-code@2x.png')
+          img.screen-image.big-landing-image.screenshots.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png')
