style: fixes pre style

--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -60,7 +60,7 @@
     font-size: $font-size-sm;
     line-height: 1.45;
     border-radius: $border-radius;
-    background-color: $gray-lighter;
+    background-color: #272822;
     margin: 1.5rem 0;
     &.chroma {
       background-color: #272822;
