docs: SEO pass 2

--- a/site/layouts/shortcodes/feature-row.html
+++ b/site/layouts/shortcodes/feature-row.html
@@ -6,6 +6,6 @@
 		<p>{{.Inner}}</p>
 	</div>
 	<div class="col-sm-8">
-		<img src="{{$image}}" alt="">
+		<img src="{{$image}}" alt="{{$header}}">
 	</div>
 </div>
