--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -3,7 +3,7 @@ footer.footer
         .row.footer-top
             .col-sm-2
                 .mb-3.mb-md-0
-                    img(src='/images/text_racoon_logo.svg' width='100px')
+                    img(src='/images/text_racoon_logo.svg' width='100px' alt='checkly logo')
             .col-sm-3
                 .mb-3.mb-md-0
                     h6 Product
