--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -5,7 +5,7 @@ nav.navbar.navbar-toggleable-md.fixed-top
           span
           span
         a.navbar-brand(href='/')
-          img(src='/images/text_racoon_logo.svg', width='120')
+          img(src='/images/text_racoon_logo.svg', width='120', alt='checkly logo')
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
             li.nav-item.dropdown
