--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -2,7 +2,7 @@ section.alerting-section
   .container
     .row.mb-lg-4
       .col-sm-12.text-center
-        h5.section-super-header 🔔 alerting
+        h5.section-super-header Alerting
         h2.section-header.mb-4 Alerting without limits
         img.img-w360.mb-4(src='/landing/alerting-options@2x.png')
       .col-sm-12.col-md-8.offset-md-2.text-center
