--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -8,10 +8,10 @@ section.all-features-section
         h5 API monitoring
         p Flexible API monitoring with custom body, headers, query parameters and unlimited assertions.
       .col-sm-4
-        h5 Click flow monitoring
+        h5 site transaction monitoring
         p Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a href='/docs/browser-checks/screenshots/' class="info-link">Take up to three screenshots</a> per check.
       .col-sm-4
-        h5 SSL expiry checks
+        h5 SSL expiry alerting
         p We'll alert you when your SSL certificate is about to expire up to 30 days in advance till D-day.
     .row
       .col-sm-4
