--- a/src/layouts/partials/api-monitoring-section.pug
+++ b/src/layouts/partials/api-monitoring-section.pug
@@ -4,15 +4,15 @@ section.api-monitoring-section
       .col-sm-5
         .text-side.text-left
           h5.section-super-header api monitoring
-          h2.section-header No more broken API's
+          h2.section-header No more broken APIs
           p.lead-text
-            | Make sure your API endpoints are always responding quickly and with the correct payload. Get started quickly
-            | with our Swagger or cURL importer and super easy API check creator.
+            | Make sure your API is always responds quickly and with the correct payload. Get started quickly
+            | with our Swagger or cURL importer and super easy API monitor creator.
             | <br><br>
-            | Run your checks from up to 8 locations, as often as once every minute. And we'll also check if
+            | Monitor your API performance from up to 8 locations, as often as once every minute. And we'll also check if
             | your SSL certificate is about to expire.
           a.cta-link(href='/product/api-monitoring/') Learn more
       .col-sm-6.offset-sm-1
         .image-side.right
-          img.screen-image.big-landing-image.assertions.fade-in.ml-md-5.lazy(src='/landing/api-assertions@2x.png')
-          img.screen-image.big-landing-image.results.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/api-results@2x.png')
+          img.screen-image.big-landing-image.assertions.fade-in.ml-md-5.lazy(src='/landing/api-assertions@2x.png', alt='api monitoring')
+          img.screen-image.big-landing-image.results.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/api-results@2x.png', alt='api monitoring')
