--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -11,7 +11,7 @@ footer.footer
                         li
                           a(href='/product/api-monitoring/') API monitoring
                         li
-                          a(href='/product/transaction-monitoring/') Transaction monitoring
+                          a(href='/product/transaction-monitoring/') Site transaction monitoring
                         li
                             a(href='/pricing') Pricing
                         li
@@ -19,9 +19,6 @@ footer.footer
                         li
                             a(href='https://status.checklyhq.com/' target='_blank') Live dashboard
                             span.green-dot
-                        li
-                          a(href='/puppeteer-recorder') Puppeteer Recorder
-
             .col-sm-2
                 .mb-3.mb-md-0
                     h6 Company
