--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -4,7 +4,7 @@ section.hero-section
       .col-sm-12.col-md-10.offset-md-1.text-center
         h1.hero-text A better way to monitor your APIs and site click flows
       .col-sm-12.col-md-8.offset-md-2.text-center
-        h2.hero-sub.mb-3
+        p.hero-sub.mb-3
           | Monitor the performance and correctness of your API endpoints & vital site transactions from a single,
           | simple dashboard.
         .mb-4
