--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -12,7 +12,7 @@ nav.navbar.navbar-toggleable-md.fixed-top
               a.nav-link.dropdown-toggle(data-toggle='dropdown', id='navbarDropdownMenuLink', href='#') Product
               .dropdown-menu.big-drop-shadow
                 a.dropdown-item(href='/product/api-monitoring/') API Monitoring
-                a.dropdown-item(href='/product/transaction-monitoring/') Transaction Monitoring
+                a.dropdown-item(href='/product/transaction-monitoring/') Site Transaction Monitoring
             li.nav-item
               a.nav-link(href='/pricing') Pricing
             li.nav-item
