--- a/src/layouts/partials/site-monitoring-section.pug
+++ b/src/layouts/partials/site-monitoring-section.pug
@@ -3,10 +3,10 @@ section.site-monitoring-section
     .row
       .col-sm-5
         .text-side.text-left
-          h5.section-super-header transaction monitoring
+          h5.section-super-header site transaction monitoring
           h2.section-header No more broken shopping carts
           p.lead-text
-            | Validate your most crucial business transactions like logins, shopping carts and onboardings
+            | Monitor and validate your most crucial site transactions like logins, shopping carts and onboarding
             | flows. Take screenshots to get instant insights into what's working and what's not.
             | <br><br>
             | Scripting browser click flows used to suck. Not anymore. Checkly uses a Google's Puppeteer framework to run your
@@ -14,5 +14,5 @@ section.site-monitoring-section
           a.cta-link(href='/product/transaction-monitoring/') Learn more
       .col-sm-6.offset-sm-1
         .image-side.right
-          img.screen-image.big-landing-image.code.fade-in.ml-md-5.lazy(src='/landing/browser-code@2x.png')
-          img.screen-image.big-landing-image.screenshots.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png')
+          img.screen-image.big-landing-image.code.fade-in.ml-md-5.lazy(src='/landing/browser-code@2x.png' alt='site transaction monitoring')
+          img.screen-image.big-landing-image.screenshots.fade-in.ml-md-5.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png', alt='site transaction monitoring')
