feat: CEO alt texts

--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -4,7 +4,7 @@ section.alerting-section
       .col-sm-12.text-center
         h5.section-super-header Alerting
         h2.section-header.mb-4 Alerting without limits
-        img.img-w360.mb-4(src='/landing/alerting-options@2x.png')
+        img.img-w360.mb-4(src='/landing/alerting-options@2x.png', alt='alert notification channels')
       .col-sm-12.col-md-8.offset-md-2.text-center
         p.lead-text
           | Keep your team up to date with a generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
@@ -13,4 +13,4 @@ section.alerting-section
         .mb-4.mb-lg-0
     .row
       .col-sm-12.text-center
-        img.alerting-image.img-fluid(src='/landing/alert-settings@2x.png')
+        img.alerting-image.img-fluid(src='/landing/alert-settings@2x.png', alt='alerting setting')
