--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -52,6 +52,6 @@ footer.footer
                     a.mr-3(href="https://heapanalytics.com/?utm_source=badge" rel="nofollow")
                         img(style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png" alt="Heap | Mobile and Web Analytics")
                     a(href='https://twitter.com/checklyhq' target='_blank')
-                        img(src='/images/twitter.svg')
+                        img(src='/images/twitter.svg', alt='twitter logo')
 
 include scripts
