--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -11,4 +11,4 @@ section.hero-section
           a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
     .row
       .col-sm-12.text-center
-          img.hero-image.img-fluid(src='/images/dashboard-screen@2x.png')
+          img.hero-image.img-fluid(src='/images/dashboard-screen@2x.png' alt='checkly monitoring dashboard')
