--- a/src/layouts/partials/results-section.pug
+++ b/src/layouts/partials/results-section.pug
@@ -11,4 +11,4 @@ section.results-section
           | raw result for you and your team to dive into.
     .row
       .col-sm-12.text-center
-        img.results-image.img-fluid(src='/landing/check-results@2x.png')
+        img.results-image.img-fluid(src='/landing/check-results@2x.png', alt='monitoring results')
