--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -5,12 +5,12 @@ section.testimonial-section.testimonial-1
         .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
           .card-block
             a(href='http://www.insiteintelligence.com/', target='_blank')
-              img.testimonial-logo(src='/images/testimonials/insite_logo.png')
+              img.testimonial-logo(src='/images/testimonials/insite_logo.png', alt='customer logo')
             p.testimonial-text
               | "Checkly makes it simple and easy for us to measure performance and automate the manual
               | tasks of ensuring our web-based platform is available for our customers."
             .testimonial-portrait
-              img(src='/images/testimonials/insite_portrait.png')
+              img(src='/images/testimonials/insite_portrait.png', alt='customer portrait')
             .testimonial-name-badge
               .text-muted.font-weight-bold Daniel Schleig
               .text-muted IT & Systems Lead
