feat: adds black friday banner

--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -1,6 +1,8 @@
 include  partials/head
 body.fixed-top-padding
-    include partials/navbar.pug
+    include partials/black-friday-banner
+    .home-nav-wrapper
+      include partials/navbar.pug
     .main
         #landing.landing
             include partials/hero-section.pug
