--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -9,8 +9,12 @@ body
                         h2 Simple, fair pricing 🍍
                         p.mb-4
                           | Take advantage of our &nbsp;
-                          strong.text-accent super low launch pricing &nbsp;
-                          | - prices will go up in 2019.
+                          strong black friday 30% of for 2 months &nbsp;
+                          | and &nbsp;
+                          strong super low launch pricing &nbsp;
+                          | - prices will go up in 2019. Sign up for a paid account and apply the coupon code &nbsp;
+                          code checkly-blackfriday
+                          | &nbsp;in your account page. Discount applies from the next billing month.
                         .billing-cycle-toggler
                           #billing-monthly.toggle.toggle-left.toggle-selected Monthly
                           #billing-annual.toggle.toggle-right Annual
