--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@
 @import 'syntax';
 @import 'blog';
 @import 'product';
+@import 'promo-banner';
 
 @import 'sections/hero';
 @import 'sections/api-monitoring';
