feat: adds code snippet, setup & teardown docs

--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -6,9 +6,9 @@ section.all-features-section
     .row
       .col-sm-4
         h5 API monitoring
-        p Flexible API monitoring with custom body, headers, query parameters and unlimited assertions.
+        p Flexible <a href='/product/api-monitoring/' class="info-link">API monitoring</a> with custom body, headers, query parameters and unlimited assertions.
       .col-sm-4
-        h5 site transaction monitoring
+        h5 Site transaction monitoring
         p Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a href='/docs/browser-checks/screenshots/' class="info-link">Take up to three screenshots</a> per check.
       .col-sm-4
         h5 SSL expiry alerting
