--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -110,4 +110,53 @@
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 $gray;
   }
+
+  nav#TableOfContents {
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+      margin-bottom: 0;
+      li {
+        ul {
+          list-style-type: disc;
+          padding-left: 1rem;
+          li {
+             ul {
+               display: none;
+             }
+          }
+        }
+      }
+    }
+  }
+
+  table {
+    width: 100%;
+    margin-bottom: $spacer-y;
+    thead {
+      tr {
+        th {
+          padding: 0.5rem;
+          border-bottom: 1px solid $gray-light;
+          color: $gray-dark;
+          text-transform: uppercase;
+          font-size: $font-size-xs;
+        }
+      }
+    }
+    tbody {
+      tr {
+        td {
+          padding: 0.5rem;
+          border-bottom: 1px solid $gray-light;
+          code {
+            padding: 0;
+            background: none;
+            border: none;
+            color: $gray-dark !important;
+          }
+        }
+      }
+    }
+  }
 }
