feat: adds next page feature

--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -31,6 +31,11 @@ body
                     .markdown.py-3
                         h1 #{'{{ .Title }}'}
                         span #{'{{.Content}}'}
+                    h5.text-left
+                      | !{' {{if .PrevInSection}} '}
+                      a(href='{{.PrevInSection.Permalink}}') Next: #{' {{.PrevInSection.Title }} '}
+                      | !{'{{end}}'}
                     hr.my-4
                     include ../partials/last-updated.pug
 include ../partials/footer.pug
+
