--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,7 @@ $light-blue: #EBFAFF;
 
 // typography
 $body-text: darken($gray, 15%);
+$line-height-pub-site: 28px !important;
 
 // sections
 $section-top-padding: 2rem;
